<resources>
    <string name="app_name">Notice Board App</string>
    <string name="app_name_caps">NOTICE BOARD APP</string>
    <string name="title_login">Sign In</string>
    <string name="title_register">Register</string>
    <string name="title_homescreen">Home Screen</string>
    <string name="title_notice_board">Notice Board</string>
    <string name="title_view_image">View Image</string>
    <string name="action_settings">Settings</string>
    <string name="header_created_by">Created by : </string>
    <string name="header_notice_count">Notices : </string>
    <string name="header_owners">Owners : </string>

    <string name="toast_register_first">Seem\'s you are not registered, try registering first</string>
    <string name="toast_wrong_login_input">Seem\'s you have entered wrong password</string>
    <string name="toast_internet_connection_error">Seem\'s you are not connected to Internet!!</string>
    <string name="toast_username_already_in_use">This username is already in use, try another username</string>
    <string name="toast_email_already_in_use">This email is already in use, try another email</string>
    <string name="toast_mobile_already_in_use">This mobile number already in use, try another mobile number</string>
    <string name="toast_register_successfully">Registered successfully!!</string>
    <string name="toast_profile_updated_successfully">Profile updated successfully!!</string>
    <string name="toast_data_synced">Data saved successfully!!</string>
    <string name="toast_error_in_data_sync">Data could not be saved, Please try again later!!</string>
    <string name="loading_text">Loading...</string>
    <string name="toast_error_in_loading_image">Error in processing image, Please try again later!!</string>

    <string name="error_enter_username">Enter username</string>
    <string name="error_enter_fullname">Enter fullname</string>
    <string name="error_enter_password">Enter password</string>
    <string name="error_enter_confirm_password">Enter confirm password</string>
    <string name="error_enter_email">Enter email address</string>
    <string name="error_enter_proper_email">Enter proper email address</string>
    <string name="error_enter_mobile_number">Enter mobile number</string>
    <string name="error_enter_proper_mobile_number">Enter proper mobile number</string>
    <string name="error_password_mismatch">Confirm password is not matching with original password</string>
    <string name="error_enter_file_name">Enter file name</string>

    <string name="btn_done">DONE</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>

    <string name="add_notice_board_dialog_title">Add Notice-Board</string>
    <string name="add_notice_dialog_title">Add Notice</string>
    <string name="hint_title">Enter title</string>
    <string name="hint_description">Enter descrption</string>
    <string name="text_select_all">Select all</string>
    <string name="error_enter_title">Enter title</string>
    <string name="error_enter_description">Enter description</string>
    <string name="error_select_user">Select atleast one user</string>
    <string name="text_admin">Admin</string>
    <string name="hint_search_user">Search user..</string>
    <string name="hint_search_notice">Search notice..</string>
    <string name="hint_search_noticeboard">Search noticeboard..</string>
    <string name="add_attachment">Add attachments..</string>
    <string name="toast_no_pdf_launcher">Seems you don\'t have any PDF viewer application!!</string>
    <string name="alert_logout_confirmation">Are you sure, you want to Logout??</string>
    <string name="alert_delete_notice">Are you sure, you want to delete notice??</string>
    <string name="toast_notice_deleted">Notice deleted..</string>
</resources>
