<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:background="@color/primary"
        android:padding="@dimen/_10dp"
        android:text="@string/add_notice_board_dialog_title"
        android:textColor="@color/white_ffffff"
        android:textSize="@dimen/font_20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_notice_board_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_below="@+id/txt_header"
        android:layout_marginLeft="@dimen/_25dp"
        android:layout_marginRight="@dimen/_25dp"
        android:layout_marginTop="@dimen/_20dp"
        android:hint="@string/hint_title"
        android:inputType="textPassword"
        android:maxLength="30"
        android:maxLines="1"
        android:paddingEnd="@dimen/_20dp"
        android:paddingLeft="@dimen/_10dp"
        android:paddingRight="@dimen/_20dp"
        android:paddingStart="@dimen/_10dp" />

    <ListView
        android:id="@+id/lst_names"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lin_button"
        android:layout_below="@+id/edt_notice_board_title" />

    <LinearLayout
        android:id="@+id/lin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45dp"
            android:layout_weight="1"
            android:background="@color/grey_acacac"
            android:text="@string/btn_cancel"
            android:textColor="@color/white_ffffff" />

        <View
            android:layout_width="@dimen/_2dp"
            android:layout_height="match_parent"
            android:background="@color/white_ffffff" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45dp"
            android:layout_weight="1"
            android:background="@color/grey_acacac"
            android:text="@string/btn_done"
            android:textColor="@color/white_ffffff" />
    </LinearLayout>

</RelativeLayout>