<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_alignParentTop="true"
        android:background="@color/primary"
        android:gravity="center_vertical"
        android:padding="@dimen/_10dp"
        android:text="@string/add_notice_dialog_title"
        android:textColor="@color/white_ffffff"
        android:textSize="@dimen/font_20sp" />
    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="@dimen/_60dp"
        android:layout_height="@dimen/_60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/primary"
        android:visibility="gone"
        android:src="@drawable/ic_close"/>
    <EditText
        android:id="@+id/edt_notice_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_below="@+id/txt_header"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginRight="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:hint="@string/hint_title"
        android:inputType="text"
        android:maxLength="100"
        android:maxLines="1"
        android:paddingEnd="@dimen/_10dp"
        android:paddingLeft="@dimen/_10dp"
        android:paddingRight="@dimen/_10dp"
        android:paddingStart="@dimen/_10dp" />

    <EditText
        android:id="@+id/edt_notice_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120dp"
        android:layout_below="@+id/edt_notice_title"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginRight="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine"
        android:maxLength="500"
        android:maxLines="5" />

    <Button
        android:id="@+id/btn_attachment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_below="@id/edt_notice_description"
        android:layout_marginEnd="@dimen/_10dp"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginRight="@dimen/_10dp"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:background="@color/accent"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_attachment"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_attachment"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/_5dp"
        android:paddingLeft="@dimen/_5dp"
        android:paddingRight="@dimen/_5dp"
        android:paddingStart="@dimen/_5dp"
        android:text="@string/add_attachment"
        android:textColor="@color/white_ffffff" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lst_attachments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lin_button"
        android:layout_below="@+id/btn_attachment"
        android:layout_marginEnd="@dimen/_10dp"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginRight="@dimen/_10dp"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp" />

    <LinearLayout
        android:id="@+id/lin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45dp"
            android:layout_weight="1"
            android:background="@color/grey_acacac"
            android:text="@string/btn_cancel"
            android:textColor="@color/white_ffffff" />

        <View
            android:layout_width="@dimen/_2dp"
            android:layout_height="match_parent"
            android:background="@color/white_ffffff" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45dp"
            android:layout_weight="1"
            android:background="@color/grey_acacac"
            android:text="@string/btn_done"
            android:textColor="@color/white_ffffff" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rlt_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_glass"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </RelativeLayout>

</RelativeLayout>